porf/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio
  namespace: portfolio
  labels:
    app: portfolio
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: huyng2724.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portfolio
                port:
                  name: http
